# Puppy

./: .gitignore  README.md
server/: CMakeLists.txt  build_on_linux.sh  build_protobuf.sh  clean_log.sh  stop_server.sh
server/base/: BaseServer.cpp  BaseServer.hpp  CMakeLists.txt  library.cpp
server/base/common/: ActiveObject.cpp  ActiveObject.hpp  BString.cpp  BString.hpp  ByteBuffer.cpp  ByteBuffer.hpp  CLock.cpp  CLock.hpp  CThread.cpp  CThread.hpp  CThreadPool.cpp  CThreadPool.hpp  Common.hpp  Condition.cpp  Condition.hpp  Define.hpp  Errors.cpp  Errors.hpp  GitRevision.cpp  GitRevision.hpp  LockedQueue.hpp  MPSCQueue.hpp  OSType.hpp  ServerInfo.cpp  (+11 more)
server/cmake/: deps.cmake  flags.cmake  functions.cmake  path.cmake
server/conf/: apns-dev-cert.pem  apns-dev-key.pem  apns-dev-req.csr  dbproxyserver.conf  httpmsgserver.conf  msgserver.conf  pushserver.conf  route_server.conf  routeserver.conf
server/db_proxy_server/: CHandlerMap.cpp  CHandlerMap.hpp  CMakeLists.txt  CProxyConn.cpp  CProxyConn.hpp  CProxyTask.cpp  CProxyTask.hpp  CSyncCenter.cpp  CSyncCenter.hpp  CachePool.cpp  CachePool.hpp  DBPool.cpp  DBPool.hpp  main.cpp
server/doc/: environment.md  start_order.md
server/file_server/: BaseTransferTask.cpp  BaseTransferTask.hpp  CMakeLists.txt  ConfigUtil.cpp  ConfigUtil.hpp  FileClientConn.cpp  FileClientConn.hpp  FileMsgServerConn.cpp  FileMsgServerConn.hpp  FileServerUtil.hpp  OfflineFileUtil.hpp  TransferTaskManager.cpp  TransferTaskManager.hpp  main.cpp
server/http_msg_server/: CDBServConn.cpp  CDBServConn.hpp  CDbAttachData.cpp  CDbAttachData.hpp  CHttpConn.cpp  CHttpConn.hpp  CHttpQuery.cpp  CHttpQuery.hpp  CMakeLists.txt  CPostDataParser.cpp  CPostDataParser.hpp  CRouteServConn.cpp  CRouteServConn.hpp  main.cpp
server/login_server/: CHttpConn.cpp  CHttpConn.hpp  CLoginConn.cpp  CLoginConn.hpp  CMakeLists.txt  IpParser.cpp  IpParser.hpp  main.cpp
server/msfs/: CHttpConn.cpp  CHttpConn.hpp  CMakeLists.txt  CriticalSection.hpp  File.cpp  File.hpp  FileManager.cpp  FileManager.hpp  Portable.hpp  main.cpp
server/msg_server/: CDBServConn.cpp  CDBServConn.hpp  CDbAttachData.cpp  CDbAttachData.hpp  CFileHandler.cpp  CFileHandler.hpp  CFileServConn.cpp  CFileServConn.hpp  CGroupChat.cpp  CGroupChat.hpp  CImUser.cpp  CImUser.hpp  CLoginServConn.cpp  CLoginServConn.hpp  CMakeLists.txt  CMsgConn.cpp  CMsgConn.hpp  CPushServConn.cpp  CPushServConn.hpp  CRouteServConn.cpp  CRouteServConn.hpp  main.cpp
server/proto/: CMakeLists.txt  CmdProcessor.cpp  Opcodes.cpp  Opcodes.hpp  OpcodesManager.hpp
server/push_server/: APNSMsg.cpp  APNSMsg.hpp  CAPNSClient.cpp  CAPNSClient.hpp  CAPNSClientHandler.cpp  CAPNSClientHandler.hpp  CAPNSFeedBackHandler.cpp  CAPNSFeedBackHandler.hpp  CByteStream.cpp  CByteStream.hpp  CConfigFileReader.cpp  CConfigFileReader.hpp  CMakeLists.txt  CPduMsg.cpp  CPduMsg.hpp  CPushApp.cpp  CPushApp.hpp  CPushServer.cpp  CPushServer.hpp  CPushServerHandler.cpp  CPushServerHandler.hpp  CPushSession.cpp  CPushSession.hpp  CPushSessionHandler.cpp  CPushSessionHandler.hpp  CSSLClientAsync.cpp  CSSLClientAsync.hpp  CSessionManager.cpp  CSessionManager.hpp  CTCPClientAsync.cpp  CTCPClientAsync.hpp  Jsonxx.cpp  Jsonxx.hpp  PublicDefine.cpp  PushDefine.hpp  main.cpp
server/route_server/: CMakeLists.txt  CRouteConn.cpp  CRouteConn.hpp  CUserInfo.cpp  CUserInfo.hpp  main.cpp
(+138 files in other folders)
