cmake_minimum_required(VERSION 3.5)
project(server)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake" ${CMAKE_MODULE_PATH})
include_directories(${CMAKE_CURRENT_SOURCE_DIR})
include(path)
include(deps)
include(functions)

add_subdirectory(proto)
add_subdirectory(base)
add_subdirectory(db_proxy_server)
add_subdirectory(file_server)
add_subdirectory(login_server)
add_subdirectory(msfs)
add_subdirectory(msg_server)
add_subdirectory(push_server)
add_subdirectory(route_server)
add_subdirectory(http_msg_server)
